--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ h2{
     font-weight: 800;
     text-align: center;
 }
+
 .inpButContainer{
     display: flex;
     justify-content: center;
@@ -87,4 +88,18 @@ p{
 span{
     font-size: 0.8rem;
     font-weight: 400;
+}
+
+footer{
+    margin-top: 15vh;
+}
+
+footer p{
+    font-size: 0.8rem;
+    margin-bottom: 10px;
+}
+
+p a{
+    text-decoration: none;
+    color: rgb(113, 255, 255);
 }
