--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html{
     font-family: "Inter",sans-serif;
-    background-Image: linear-gradient(to right, #430ee3, #5a0d4a);
+    background-Image: linear-gradient(to right, #15a6a1, #4b3ac6);
     color: white;
     display: flex;
     align-items: center;
