--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html{
     font-family: "Inter",sans-serif;
-    background-Image: linear-gradient(to right, #ec4198, #fa960b);
+    background-Image: linear-gradient(to right, #588cc4, #772bce);
     color: white;
     display: flex;
     align-items: center;
